--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
   --app-8: "AppleSDGothicNeoEB00", sans-serif;
   --app-9: "AppleSDGothicNeoH00", sans-serif;
   --mal: "Malgun Gothic", sans-serif;
+  --h1: "Courier New", Courier, monospace;
 }
 
 /* Default CSS */
@@ -44,7 +45,7 @@ header::before {
   opacity: 0.7;
 }
 header img {
-  height: 25px;
+  height: 24px;
   cursor: pointer;
 }
 nav {
@@ -69,4 +70,49 @@ nav .login a {
   text-align: center;
   border-radius: 100px;
   margin-left: 24px;
+}
+
+/* ---------- Section: welcome ---------- */
+.welcome {
+  padding: 0;
+  background: linear-gradient(#f8faff 67.5%, #f0f4ff 0);
+  height: 820px;
+  position: relative;
+}
+.welcome-inner {
+  width: 1200px;
+  height: 580px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.welcome-main-bg {
+  position: absolute;
+  right: 25px;
+  bottom: -40px;
+  width: 770px;
+  height: inherit;
+}
+.main-words {
+  margin-left: 48px;
+}
+/* 폰트 없음 비슷한 것으로 대체 */
+.main-words h1 {
+  font-size: 57px;
+  font-family: var(--h1);
+  letter-spacing: -6px;
+  line-height: 1.3em;
+}
+/* 폰트 없음 비슷한 것으로 대체 */
+.main-words p {
+  font-size: 38px;
+  font-family: var(--h1);
+  letter-spacing: -6px;
+}
+.welcome-main-millie {
+  position: absolute;
+  width: 180px;
+  height: 45px;
+  bottom: -35px;
 }
