--- a/css/custom.reset.css
+++ b/css/custom.reset.css
@@ -21,3 +21,14 @@ h5,
 h6 {
   line-height: 1.5em;
 }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: polygon(0 0, 0 0, 0 0);
+  border: 0;
+}
