--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,51 @@ nav .login a {
   height: 580px;
   background: url("../img/메인배경.png") no-repeat center / contain;
 }
+
+/* ---------- Section: slide ---------- */
+.slide {
+  padding: 0 24px;
+}
+.slide-share-p-second {
+  margin-bottom: 24px;
+}
+.book-lists {
+  width: 100%;
+  height: 700px;
+  overflow: hidden;
+}
+.book-lists li {
+  width: 100%;
+  height: 183px;
+  margin: 24px 0;
+}
+.first-books {
+  background: 0% 0% / cover repeat-x url("../img/slide01.png");
+  margin-top: 48px;
+  animation: to-left-slide 50s linear infinite;
+}
+.second-books {
+  background: 0% 0% / cover repeat-x url("../img/slide02.png");
+  animation: to-right-slide 50s linear infinite;
+}
+.third-books {
+  background: 0% 0% / cover repeat-x url("../img/slide03.png");
+  animation: to-left-slide 50s linear infinite;
+}
+
+@keyframes to-left-slide {
+  0% {
+    background-position: left center;
+  }
+  100% {
+    background-position: right center;
+  }
+}
+@keyframes to-right-slide {
+  0% {
+    background-position: right center;
+  }
+  100% {
+    background-position: left center;
+  }
+}
