--- a/css/style.css
+++ b/css/style.css
@@ -44,15 +44,43 @@ body {
   line-height: 1.6;
 }
 
-/* free-book & read-headset-book */
+/* 책 가운데 정렬 */
+.nth-list {
+  margin: auto;
+}
+
+/* books-section-each-title */
+.books-section-each-title {
+  font-size: 20px;
+  color: rgb(36, 36, 36);
+  font-weight: 700;
+  letter-spacing: -0.6px;
+  margin-bottom: 35px;
+}
+
+/* book-list-wrapper */
+.book-list-wrapper {
+  display: flex;
+  gap: 16px;
+  max-width: 1155px;
+}
+
+/* free-book & read-headset-book & each-book-each */
 .each-free-book,
-.each-read-headset-book {
+.each-read-headset-book,
+.each-book-each,
+.each-book-each-month,
+.each-book-each-audiobest,
+.each-book-each-original {
   width: 145px;
   height: 215px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.2) 3px 3px 5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .headset-icon,
 .free-icon {
@@ -66,6 +94,52 @@ body {
   top: 26px;
   right: -7px;
   width: 40px;
+}
+
+/* a-book-info */
+.a-book-info,
+.a-book-info-month,
+.a-book-info-audiobook,
+.a-book-info-original {
+  width: 145px;
+  letter-spacing: -0.6px;
+  margin-top: 12px;
+  display: grid;
+  gap: 3px;
+}
+.book-title {
+  color: #242424;
+  font-weight: 700;
+  line-height: 20.8px;
+}
+.book-author,
+.book-percent-time {
+  color: #6f6f6f;
+  font-size: 14px;
+  line-height: 18.2px;
+}
+.complete-percent-time-wrapper > img {
+  vertical-align: middle;
+  margin-bottom: 2.7px;
+  margin-right: 3px;
+}
+
+/* 말줄임 2줄 허용 */
+.book-title {
+  width: 145px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+/* 말줄임 1줄 허용 */
+.book-author {
+  width: 145px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* ---------- Header ---------- */
@@ -187,6 +261,10 @@ nav .login a {
 }
 .share-p p:last-child {
   margin-bottom: 80px;
+}
+.list-gap {
+  display: grid;
+  gap: 64px;
 }
 
 /* keyframes */
