--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,7 @@ input[id="tab5"]:checked ~ .con5 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 14px;
 }
 .example-tab .tabs-ul li.active {
   background-color: #f7f7f7;
@@ -550,7 +551,7 @@ input[id="tab5"]:checked ~ .con5 {
 .icon-title-phrase p:last-child {
   font-size: 22px;
   line-height: 35.2px;
-  letter-spacing: -0.6px;
+  letter-spacing: -0 0.6px;
   color: #555555;
 }
 .down-wrapper {
@@ -565,6 +566,7 @@ input[id="tab5"]:checked ~ .con5 {
   color: #242424;
   margin-bottom: 24px;
   word-break: break-all;
+  width: 371px;
 }
 .detail-phrase-first {
   font-weight: 700;
@@ -599,6 +601,43 @@ input[id="tab5"]:checked ~ .con5 {
   background-color: pink;
   width: 320px;
   height: 680px;
+  position: relative;
+  z-index: 100;
+}
+
+.smart-phone .slide-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.smart-phone .slide-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: -1;
+  /* transition: all 0.5s ease; */
+}
+
+.smart-phone .slide-item.active {
+  opacity: 1;
+  z-index: 1;
+}
+
+.smart-phone .slide-item img,
+.smart-phone .slide-item video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.smart-phone .slide-item video {
+  background-color: #000;
 }
 
 /* keyframes */
