--- a/css/style.css
+++ b/css/style.css
@@ -594,50 +594,30 @@ input[id="tab5"]:checked ~ .con5 {
   float: right;
   border: 1px solid blueviolet;
 }
-.smart-phone {
-  background-image: url("../img/phone.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: pink;
-  width: 320px;
+.smart-phone-inner {
+  width: 330px;
   height: 680px;
   position: relative;
-  z-index: 100;
+  overflow: hidden;
+  border-radius: 53px;
+  filter: drop-shadow(10px 10px 40px rgba(0, 0, 0, 0.1));
 }
-
-.smart-phone .slide-wrapper {
+.phone-image {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.smart-phone .slide-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  z-index: -1;
-  /* transition: all 0.5s ease; */
-}
-
-.smart-phone .slide-item.active {
-  opacity: 1;
   z-index: 1;
 }
-
-.smart-phone .slide-item img,
-.smart-phone .slide-item video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.images-container {
+  display: flex;
+  width: 1320px;
+  transition: transform 0.5s ease-in-out;
 }
-
-.smart-phone .slide-item video {
-  background-color: #000;
+.images-container img {
+  width: 330px;
+  height: 680px;
 }
 
 /* keyframes */
