--- a/css/style.css
+++ b/css/style.css
@@ -271,11 +271,41 @@ nav .login a {
   animation: to-left-slide 50s linear infinite;
 }
 
-/* ---------- Section: ad ---------- */
-/* ✅ */
+/* ---------- Section: ad, story ---------- */
 .ad {
   background-color: #f7f7f7;
   padding: 80px 0 120px;
+}
+.video-container-1 {
+  position: relative;
+  max-width: 730px;
+  height: 411px;
+  margin: auto;
+  margin-top: -20px;
+}
+.video-1,
+.video-2 {
+  position: absolute;
+  max-width: 100%;
+  height: 100%;
+}
+.thumbnail-1,
+.thumbnail-2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
+.play-button-1,
+.play-button-2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 56px;
+  height: 56px;
+  cursor: pointer;
 }
 
 /* ---------- Section: books ---------- */
@@ -620,7 +650,34 @@ input[id="tab5"]:checked ~ .con5 {
   height: 680px;
 }
 
-/* keyframes */
+/* ---------- Section: story ---------- */
+.story {
+  background-color: #f7f7f7;
+  padding-top: 160px;
+}
+.yellow-bg {
+  background-image: url(../img/review-bg.png);
+  padding: 80px 204px 115px;
+}
+.ad-and-phrase-wrapper {
+  width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 204px;
+}
+.video-container-2 {
+  position: relative;
+  width: 415px;
+  height: 415px;
+}
+.story-left {
+  margin-top: -130px;
+}
+.story-right {
+  text-align: start;
+}
+
+/* ---------- keyframes ---------- */
 @keyframes to-left-slide {
   0% {
     background-position: left center;
