--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,70 @@ input[id="tab5"]:checked ~ .con5 {
   text-align: start;
 }
 
+/* ---------- Section: qa ---------- */
+.qa {
+  background-color: #ffeb60;
+}
+.qa-content-wrapper {
+  padding: 80px 24px 84px;
+  width: 1440px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+.qa-content p {
+  text-align: center;
+  margin-bottom: 60px;
+}
+.accordion {
+}
+.accordion-item {
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.1) 10px 10px 40px 0px;
+  border-radius: 20px;
+  letter-spacing: -0.6px;
+  max-height: 500px;
+  padding: 22px 24px 24px;
+  width: 920px;
+  cursor: pointer;
+}
+.accordion-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.accordion-item.active .accordion-title::after {
+}
+.qa-content-wrapper p {
+  font-size: 49px;
+  font-weight: 700;
+}
+.accordion-item .accordion-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  margin-bottom: 21px;
+}
+.accordion-item .accordion-title::after {
+  content: "\f107";
+  font-family: fontawesome;
+  float: right;
+  color: #444;
+  transition: 0.35s;
+}
+.accordion-item.active .accordion-title::after {
+  transform: rotate(180deg);
+}
+.accordion-item .accordion-content {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #555555;
+  border-top: 1px solid #242424;
+  padding-top: 16px;
+}
+.accordion-item .accordion-content strong {
+  font-weight: 700;
+}
+
 /* ---------- keyframes ---------- */
 @keyframes to-left-slide {
   0% {
