--- a/css/style.css
+++ b/css/style.css
@@ -692,22 +692,18 @@ input[id="tab5"]:checked ~ .con5 {
   text-align: center;
   margin-bottom: 60px;
 }
-.accordion {
-}
 .accordion-item {
   background-color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.1) 10px 10px 40px 0px;
   border-radius: 20px;
   letter-spacing: -0.6px;
   max-height: 500px;
-  padding: 22px 24px 24px;
+  padding: 22px 24px;
   width: 920px;
   cursor: pointer;
 }
 .accordion-item:not(:last-child) {
   margin-bottom: 16px;
-}
-.accordion-item.active .accordion-title::after {
 }
 .qa-content-wrapper p {
   font-size: 49px;
@@ -717,7 +713,6 @@ input[id="tab5"]:checked ~ .con5 {
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
-  margin-bottom: 21px;
 }
 .accordion-item .accordion-title::after {
   content: "\f107";
@@ -736,6 +731,8 @@ input[id="tab5"]:checked ~ .con5 {
   color: #555555;
   border-top: 1px solid #242424;
   padding-top: 16px;
+  display: none;
+  margin-top: 21px;
 }
 .accordion-item .accordion-content strong {
   font-weight: 700;
