--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,23 @@
+@media (max-width: 490px) {
+  /* ---------- Section: fav-books ---------- */
+  input[type="radio"][id="tab5"] + label {
+    margin-left: 24px;
+  }
+  label {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 1150px) {
+  /* ---------- Section: books, fav-books ---------- */
+  .book-list-wrapper {
+    /* width: 100%; */
+    overflow-x: auto;
+    /* -webkit-overflow-scrolling: touch; */
+    /* scroll-snap-type: x mandatory; */
+    /* scroll-padding: 0 8px; */
+    /* white-space: nowrap; */
+  }
+}
 @media (max-width: 768px) {
   /* ---------- Common CSS ---------- */
   .share-p p:first-child {
@@ -57,10 +77,12 @@
   .books {
     padding: 48px 0;
   }
-  .nth-list {
-    margin-top: 32px;
-  }
+  /* books, fav-books */
   .book-list-wrapper {
+    overflow-x: auto;
+  }
+  .each-book-each {
+    /* scroll-snap-align: center; */
   }
   .list-gap {
     gap: 31px;
@@ -72,9 +94,6 @@
   }
   input[type="radio"] + label {
     /* margin-bottom: 0; */
-  }
-  input[type="radio"][id="tab5"] + label {
-    margin-left: 24px;
   }
 
   /* ---------- Section: completed ---------- */
@@ -107,9 +126,6 @@
   /* ---------- Section: example ---------- */
   .tab-content-box {
     padding: 32px 0;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-between; */
   }
   .tab-content-wrapper {
     min-height: 787px;
@@ -117,8 +133,6 @@
   .icon-title-phrase {
     margin-top: 0;
     text-align: center;
-    /* position: relative; */
-    /* z-index: 2; */
   }
   .icon-title-phrase img {
     margin-bottom: 0;
@@ -133,7 +147,6 @@
     margin-bottom: 18px;
   }
   .tab-box {
-    /* overflow:auto; */
     min-height: inherit;
   }
   .float-left {
@@ -144,21 +157,14 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* position: relative; */
-    /* width: 100%; */
-    /* height: 0; */
   }
   .float-right {
     float: none;
   }
   .down-wrapper {
-    /* margin: auto; */
     position: static;
     text-align: center;
     max-width: 301px;
-    /* margin-top: 100px; */
-    /* bottom: 0; */
-    /* width: 100%; */
   }
   .detail-phrase {
     width: 100%;
@@ -167,24 +173,15 @@
     margin-top: 32px;
   }
   .click-num {
-    /* margin: auto; */
     justify-content: center;
   }
   .smart-phone-inner {
-    /* display: none; */
-    /* position: absolute; */
     max-width: 223px;
     max-height: 472px;
     margin: auto;
     border-radius: 35px;
-    /* position: absolute; */
-    /* top: 0; */
-    /* z-index: 1; */
-    /* left: 50%; */
     top: 130%;
     transform: translateY(-130%);
-    /* transform: translate(-50%, -106%); */
-    /* top: 50%; */
   }
   .images-container {
     width: 100%;
@@ -193,5 +190,71 @@
   .images-container img {
     width: 100%;
     height: 100%;
+  }
+
+  /* ---------- Section: story ---------- */
+  .qa-content-wrapper {
+    padding: 40px 24px 84px;
+  }
+  .story-right.share-p p:first-child {
+    font-size: 32px;
+  }
+  .story-right.share-p p:last-child {
+    font-size: 16px;
+  }
+
+  /* ---------- Section: qa ---------- */
+  .qa-content-wrapper {
+    padding: 40px 24px 84px;
+  }
+  .qa-content p {
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+  .accordion-item .accordion-title {
+    font-size: 16px;
+    /* max-width: 250px; */
+    /* white-space: pre-wrap; */
+  }
+  .accordion-item .accordion-content {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1200px) {
+  /* ---------- Section: story ---------- */
+  .yellow-bg {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    padding: 0;
+  }
+  .ad-and-phrase-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    padding: 0;
+  }
+  .story-left {
+    margin-top: -95px;
+  }
+  .video-container-2,
+  .video-2 {
+    width: 315px;
+    height: 315px;
+  }
+  .share-p.story-right {
+    margin-top: 45px;
+    text-align: center;
+    width: 100vw;
+  }
+  .story-right.share-p p:first-child {
+    font-size: 40px;
+  }
+  .story-right.share-p p:last-child {
+    font-size: 18px;
   }
 }
