--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@
 }
 
 /* ---------- Default CSS ---------- */
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
   font-family: var(--spo);
 }
@@ -169,7 +174,7 @@ body {
 
 /* ---------- Header ---------- */
 header {
-  width: 100vw;
+  width: 100%;
   position: fixed;
   left: 0;
   top: 0;
@@ -211,7 +216,6 @@ nav .login a {
 .welcome {
   background: linear-gradient(#f8faff 67.5%, #f0f4ff 0);
   width: 100%;
-  /* margin-bottom: 80px; */
 }
 .welcome-inner {
   display: flex;
@@ -370,45 +374,42 @@ input[id="tab5"]:checked ~ .con5 {
   text-align: center;
   padding-top: 63px;
   position: relative;
+  width: 100vw;
 }
 .completed-wrapper {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 62px 20px 0;
   margin-bottom: 55px;
-  padding-top: 62px;
 }
 .completed-bg-center {
   position: absolute;
   bottom: 0;
+  /* margin: auto; */
   left: 50%;
   transform: translateX(-50%);
+  z-index: 1;
 }
 .reading-mock {
   display: block;
   margin: 0 auto;
-}
-.reading-mock-tooltip {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
 }
 .reading-average {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   bottom: 103px;
-  width: 417px;
+  max-width: 417px;
 }
 .how-read img {
-  width: 200px;
+  width: 172px;
 }
 .how-read-first-wrapper {
   display: flex;
   justify-content: space-between;
   max-width: 850px;
-  margin: 0 auto;
+  margin: auto;
 }
 .how-read-second-wrapper {
   display: flex;
@@ -883,8 +884,8 @@ footer {
   position: fixed;
   bottom: 16px;
   /* margin: auto; */
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 999;
   max-width: 450px;
   width: 90%;
