--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
 .nth-list {
   margin: auto;
   padding: 0 24px;
+  cursor: pointer;
 }
 
 /* books-section-each-title */
@@ -883,7 +884,6 @@ footer {
   text-align: center;
   position: fixed;
   bottom: 16px;
-  /* margin: auto; */
   left: 50%;
   transform: translateX(-50%);
   z-index: 999;
