--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,9 @@ nav .login a {
   margin: auto;
   margin-top: -20px;
 }
+iframe{
+  border: 0px;
+}
 .video-1,
 .video-2 {
   position: absolute;
@@ -585,7 +588,7 @@ input[id="tab5"]:checked ~ .con5 {
 .icon-title-phrase p:last-child {
   font-size: 22px;
   line-height: 35.2px;
-  letter-spacing: -0 0.6px;
+  letter-spacing: -0.6px;
   color: #555555;
 }
 .down-wrapper {
