--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,9 +21,65 @@
   }
 
   /* ---------- Header ---------- */
-  nav ul li:not(.login) {
-    display: none;
+  nav .login {
+    margin-left: 0;
   }
+  .logo-click-to-top {
+    margin: auto;
+  }
+  .hamburger-menu {
+    display: none;
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 10;
+  }
+  .hamburger-menu .hamburger-line {
+    display: block;
+    width: 16px;
+    height: 2px;
+    background-color: #333;
+    margin-bottom: 4px;
+    transition: all 0.3s;
+  }
+  .hamburger-menu .hamburger-line:nth-child(3) {
+    margin-bottom: 0;
+  }
+  .hamburger-menu.open .hamburger-line:nth-child(1) {
+    transform: translateY(5px) rotate(45deg);
+  }
+  .hamburger-menu.open .hamburger-line:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger-menu.open .hamburger-line:nth-child(3) {
+    transform: translateY(-7px) rotate(-45deg);
+  }
+  .hamburger-menu {
+    display: block;
+  }
+  nav ul {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 24px 16px;
+    border-top: 0.5px solid #dfdfdf;
+    background-color: rgba(255, 255, 255, 0.9);
+  }
+  nav ul li {
+    text-align: center;
+    padding: 15px 0;
+  }
+  nav.open ul {
+    display: flex;
+  }
+
   /* ---------- Section: welcome ---------- */
   .welcome {
     min-height: 650px;
