--- a/css/style.css
+++ b/css/style.css
@@ -184,31 +184,38 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 24px;
+  padding: 15px 24px;
   border-bottom: 0.5px solid #dfdfdf;
 }
 header img {
   height: 24px;
   cursor: pointer;
 }
+nav{
+  display: flex;
+  align-items: center;
+}
 nav ul {
   display: flex;
   justify-content: space-between;
-  width: 100%;
 }
-li a {
+nav li a {
   color: rgb(36, 36, 36);
   padding: 20px 24px;
 }
-nav .login a {
+nav .login {
   font-size: 12px;
-  color: rgb(255, 255, 255);
-  width: 82px;
-  padding: 8.5px 25px;
+  letter-spacing: -0.6px;
+  color: #fff;
+  padding: 7px 25px;
   background-color: #333333;
   text-align: center;
   border-radius: 100px;
   margin-left: 24px;
+  cursor: pointer;
+}
+.hamburger-menu{
+  display: none;
 }
 
 /* ---------- Section: welcome ---------- */
@@ -286,7 +293,7 @@ nav .login a {
   margin: auto;
   margin-top: -20px;
 }
-iframe{
+iframe {
   border: 0px;
 }
 .video-1,
