--- a/css/responsive.css
+++ b/css/responsive.css
@@ -257,6 +257,10 @@
     width: 100%;
     height: 100%;
   }
+  .images-container video {
+    width: 100%;
+    height: 100%;
+  }
 
   /* ---------- Section: story ---------- */
   .qa-content-wrapper {
