video를 inline-block으로 수정

--- a/css/style.css
+++ b/css/style.css
@@ -665,6 +665,7 @@ input[id="tab5"]:checked ~ .con5 {
 .images-container video {
   width: 330px;
   height: 680px;
+  display: inline-block;
 }
 
 /* ---------- Section: story ---------- */
