--- a/css/font.css
+++ b/css/font.css
@@ -1,38 +1,40 @@
-/* Fonts - Spoqa Han Sans */
+/* font - Spoqa Han Sans */
 @font-face {
-  font-family: "Spoqa Han Sans";
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   font-weight: 700;
   src: local("Spoqa Han Sans Bold"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansBold.woff2") format("woff2"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansBold.woff") format("woff"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansBold.ttf") format("truetype");
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Bold.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Bold.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Spoqa Han Sans";
+  font-family: "Spoqa Han Sans Neo", sans-serif;
+  font-weight: 500;
+  src: local("Spoqa Han Sans Medium"),
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Medium.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   font-weight: 400;
   src: local("Spoqa Han Sans Regular"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansRegular.woff2") format("woff2"),
-    url("../fonts/spoqa-han-sans/SpoqaHanSans/SpoqaHanSansRegular.woff")
-      format("woff"),
-    url("../fonts/spoqa-han-sans/SpoqaHanSans/SpoqaHanSansRegular.ttf")
-      format("truetype");
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Regular.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Regular.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Spoqa Han Sans";
-  font-weight: 300;
+  font-family: "Spoqa Han Sans Neo", sans-serif;
+  font-weight: 200;
   src: local("Spoqa Han Sans Light"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansLight.woff2") format("woff2"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansLight.woff") format("woff"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansLight.ttf") format("truetype");
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Light.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Light.woff") format("woff");
 }
 
 @font-face {
-  font-family: "Spoqa Han Sans";
+  font-family: "Spoqa Han Sans Neo", sans-serif;
   font-weight: 100;
   src: local("Spoqa Han Sans Thin"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansThin.woff2") format("woff2"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansThin.woff") format("woff"),
-    url("../fonts/SpoqaHanSans/SpoqaHanSansThin.ttf") format("truetype");
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Thin.woff2") format("woff2"),
+    url("../fonts/SpoqaHanSansNeo/SpoqaHanSansNeo-Thin.woff") format("woff");
 }
